--- a/jobcionario/src/pages/home/home.css
+++ b/jobcionario/src/pages/home/home.css
@@ -1,5 +1,54 @@
-.header-home {
+.card-list{
+    padding-top: 1rem;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+}
+.div-card{
+    padding-bottom: 1rem;
+}
+
+.btn-card {
+    border-color:  rgba(87,9,121,1);
+    width: 16rem;
+    border-radius: 32px;
+    padding: 2rem;
+    background-color: rgb(242, 242, 243);
+    box-shadow: 6px 6px rgba(137, 135, 135, 0.171);
+    cursor: pointer;
+}
+
+.btn-card:hover{
+    transform: scale(1.09);
+}
+
+.article {
     display: flex;
     width: 100%;
-    color: aqua;
+    padding-bottom: 1rem;
+}
+
+.head-modal{
+    background: linear-gradient(90deg, rgba(8,73,194,1) 0%, rgba(87,9,121,1) 51%, rgba(184,28,211,1) 84%, rgba(0,174,255,1) 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-weight: 700;
+  font-size: 2rem;
+} 
+
+.subhead-modal{
+    font-size: 2rem;
+    font-weight: 300;
+
+    padding-left: 1rem;
+    background: linear-gradient(90deg, rgba(8,73,194,1) 0%, rgba(87,9,121,1) 51%, rgba(184,28,211,1) 84%, rgba(0,174,255,1) 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.info-modal{
+    font-weight: 200;
+    color: rgb(65, 64, 64);
 }
